--- a/backend/ecomm/package.json
+++ b/backend/ecomm/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "backend",
+  "name": "ecomm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {},
   "scripts": {
     "dev": "nodemon index.js"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^1.19.4"
+  }
 }
