--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.17.1"
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon -r esm index.js"
   },
   "author": "",
   "license": "ISC"
