--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "esm": "^3.2.25",
     "express": "^4.17.1"
   },
