--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "cookie-session": "^1.4.0",
     "esm": "^3.2.25",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.9.2"
   },
   "devDependencies": {},
   "scripts": {
