--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "cookie-session": "^1.4.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "express-validator": "^6.9.2"
+    "express-validator": "^6.9.2",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
